[package]
name = "shell-scripts"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambassador = "0.4.0"
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
tracing = "0.1.40"
chrono = "0.4.38"
dialoguer = "0.11.0"
