[package]
name = "dsu"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambassador = "0.4.0"
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
tracing = "0.1.40"
chrono = "0.4.38"
dialoguer = "0.11.0"
log = "0.4.21"
regex = "1.10.5"
copypasta = "0.10.1"
tar = "0.4.41"
zip = "2.1.3"
unrar = "0.5.3"
sevenz-rust = "0.6.0"
tempfile = "3.10.1"
flate2 = "1.0.30"
